# anime-schedule

./: .gitignore  README.md  docker-compose.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/anilist/: api.rs  query-multiple.graphql  types.rs
cli/src/cli/: auth.rs  find.rs  prompt.rs
worker/: Dockerfile  Gemfile  add_show.rb  anilist.rb  auth.rb  calendar.rb  config.ru  find.rb  query-multiple.graphql  query-one.graphql  worker.rb
