[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
inquire = "0.6.2"
open = "5.0.1"
reqwest = { version = "0.11.24", features = ["json"] }
rocket = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = "1.36.0"
